...

          return Padding(
            padding: const EdgeInsets.only(left: 16, top: 50, right: 16),
            child: Column(
              children: [
                SearchBar(
                  key: const Key("searchText"),
                  controller: searchController,

                  hintText: AppLocalizations.of(context)!.search,
                  leading: Image.asset(
                    "Assets/Icons/Icons.png",
                    color: theme.colorScheme.onPrimary,
                  ),

                  trailing: [
                    if (searchText != "")
                      IconButton(
                        key: const Key("clearButton"),
                        onPressed: () {
                          setState(() {
                            searchText = "";
                            searchController.clear();
                          });
                        },
...
